# opengl_tutorial

./: .gitmodules  CMakeLists.txt
resource/glsl/: cor_frame.s  cor_vertex.s  frame.s
src/: shader.h
test/: CMakeLists.txt  cordinate.cc  hello_triangle.cc  hello_window.cc  texture.cc  transform.cc
